# E3CNC

./: .dockerignore  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  STATUS.md  _e3cnc_deploy.py  _e3cnc_shared.py  _e3cnc_supervisor.py  bump-version.sh  cliff.toml  commands.json  deploy.sh  e3cnc-cli  e3cnc-tui  eslint.config.mjs  index.html  install-cli  install.sh  moonraker-cnc-update.conf  package-lock.json  package.json  pytest.ini  vite.config.ts
.hermes/: final-fix2.py  snapshot-192-168-0-239.txt
admin/: index.html  package.json  tsconfig.json  vite.config.ts
ansible/: requirements.yml
build-scripts/: download_frontend.sh  e3cnc-completion.sh  install_to_moonraker.sh  post_update.sh  uninstall.sh
cli/: __init__.py  __main__.py  commands.json  commands.py  helpers.py  menu.py  parser.py
config/: moonraker-cnc-update.conf  theme.json
config/moonraker/: README.md  pyproject.toml
docs/: AGENTS.md  BETA_TEST_PLAN.md  CHANGELOG.md  CLAUDE.md  INSTALLATION.md  README.md  TUI.md  go-cli-rewrite-plan.md  index.html
examples/: update-manager.conf
macros/: README.md  e3cnc_macros.cfg
moonraker/: README.md  moonraker.conf.example
moonraker-cnc-agent/: moonraker.conf
prd/: 2026-07-01-ts-error-remediation.md  design-system-plan.md  e3cnc-monorepo-single-deploy-plan.md
scripts/: build-tui.sh  bump-version.sh  download_frontend.sh  install-cli  install_to_moonraker.sh  post_update.sh  restore_backup.sh
specs/: cnc-cleanup-plan.md
src/: App.vue  main.ts
tests/: Dockerfile.fresh-install  Dockerfile.multi-instance  cypress.d.ts  (+13 more)
(+553 files in other folders)
